deploy/kustomize/components/sftp-ingest/patch-api-sftp-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docuvate-api
spec:
  template:
    spec:
      containers:
        - name: api
